--- a/JASA/journal_version.tex
+++ b/JASA/journal_version.tex
@@ -106,7 +106,7 @@
 
 \bigskip
 \begin{abstract}
-We assess here whether standard stochastic mixed membership models are adapted for link prediction in social networks by studying how they handle homophily and preferential attachment. To do so, we first introduce formal definitions of these phenomena; we then study how stochastic mixed membership models relate to these definitions. Our theoretical analysis reveals that standard stochastic mixed membership models comply with homophily with the similarity that underlies them. For preferential attachment, the situation is more contrasted: if these models do not comply with global preferential attachment, their compliance to local preferential attachment depends on whether the memberships to latent factors are hard or soft, and in the latter case on whether the underlying latent factor distribution is bursty or not. We illustrate these elements on synthetic and real networks by using the generative properties of Bayesian model.
+We assess here whether standard stochastic mixed membership models are adapted for link prediction in social networks by studying how they handle  preferential attachment. Preferential attachment states that a vertex prefers to join the more connected nodes existing in the network. To study this property, we first introduce formal definitions of this phenomenon; we then study how stochastic mixed membership models relate to these definitions. Our theoretical analysis reveals that these models do not comply with global preferential attachment whereas their compliance to local preferential attachment depends on whether the memberships to latent factors are hard or soft, and in the latter case on whether the underlying latent factor distribution is bursty or not. We illustrate these elements on synthetic and real networks by using the generative properties of Bayesian model.
 \end{abstract}
 
 \noindent%
