--- a/Marami/presentation/presentation.tex
+++ b/Marami/presentation/presentation.tex
@@ -188,6 +188,7 @@
 \newtheorem{Problemes}{Problèmes}
 \newtheorem{Avantages}{Avantages}
 \newtheorem{Inconvenients}{Inconvénients}
+\newtheorem{property}{Property}
 
 \input{slide}
 
